# xcm-domain-service

./: .gitignore  Cargo.toml  README.md
contracts/: Cargo.toml  README.md
contracts/common/: Cargo.toml  call_encodings.rs  lib.rs  simple_contract_error.rs  xcm_utils.rs
contracts/domain_service/: Cargo.toml  lib.rs
contracts/handler_simple_contract/: Cargo.toml  lib.rs
contracts/handler_who_am_i/: Cargo.toml  lib.rs
contracts/simple_contract/: Cargo.toml  lib.rs
contracts/utils/: Cargo.toml  lib.rs  multilocation_encoded.rs
contracts/who_am_i/: Cargo.toml  lib.rs
contracts/xc_domain_service/: Cargo.toml  lib.rs
contracts/xc_simple_contract/: Cargo.toml  lib.rs
contracts/xc_who_am_i/: Cargo.toml  lib.rs
contracts/xcm_handler/: Cargo.toml  lib.rs
src/: README.md  lib.rs  parachain.rs
src/test_xcm_domains/: mod.rs  native_dns.rs  setup.rs  xcm_dns.rs
src/testnet_config/: mock_msg_queue.rs  mod.rs
src/testnet_config/runtimes/: asset_hub.rs  mod.rs  parachain.rs  relay_chain.rs
src/tests/: mod.rs  who_am_i.rs  xc_who_am_i.rs
zombienet/: .gitignore  Cargo.toml  README.md  main.rs  metadata.scale  utils.rs  zombienet.sh
zombienet/artefacts/: domain_service.json  domain_service.wasm  xc_domain_service.json  xc_domain_service.wasm  xcm_handler.json  xcm_handler.wasm
zombienet/config/: kubernetes.toml  native.toml
