[package]
name = "xcm-domain-simulator"
version = "0.1.0"
authors = ["AZERO.ID <hello@azero.id>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.5.0", features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.7.0", default-features = false, features = ["derive"] }

# xcm
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }

# polkadot
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }

# pallets
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
pallet-uniques = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }

# substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }

[dev-dependencies]
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "tracing-log"] }

[workspace]
members = ["contracts/*"]
