[package]
name = "setup-xcm-domains"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "setup_xcm_domains"
path = "main.rs"

[workspace]

[dependencies]
subxt = { version = "0.32.1", features = ["substrate-compat"] }
subxt-signer = { version = "0.32.1", features = ["subxt"] }
futures = { version = "0.3.27", default-features = false, features = ["std"] }
tokio = { version = "1.28", features = ["macros", "time", "rt-multi-thread"] }
sp-weights = "23.0.0"
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
