[package]
name = "handler_simple_contract"
version = "0.1.0"
authors = ["AZERO.ID <hello@azero.id>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
common = { path = "../common", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "4.3.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "common/std",
]
ink-as-dependency = []
e2e-tests = []
